--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </h3>
             <p>Leave us your email and we'll let you know when it's out!</p>
             <form class="form">
-              <input class="input" placeholder="E-mail" type="email" />
+              <input class="input" placeholder="E-mail" type="email" required />
               <button class="submit-button">Submit</button>
             </form>
           </div>
@@ -69,7 +69,7 @@
           <img src="./assets/Ellipse 1.png" width="200px" height="200px" alt="user1" />
           <blockquote>
             <p>
-              "After using Headspace for a few months I came a conclusion that I overpay for
+              "After using Headspace for a few months I came to a conclusion that I overpay for
               features I don't even use and what I actually use – the meditations, isn't worth such
               a high price. <b>I'm excited about MEditate's focus on meditation,</b> as I go
               elsewhere for my workouts and playlists."
@@ -85,7 +85,7 @@
             <p>
               "I love the three main buttons I see as I open MEditate! Turns out it
               <b>takes less time to follow the four steps and create your own meditation</b>, that's
-              exacly how you want it, than browsing through 1 000 available options. I'm a fan!"
+              exacly how you want it, than browsing through 1000 available options. I'm a fan!"
             </p>
             <cite
               >Michal, <span>MEditate beta tester <br />(ex Calm user)</span></cite
