fix letter mistake

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="reviews-wrapper">
             <h2 class="title">Make what works best for you.</h2>
             <h3 class="desc">
-              By creating a meditation that is adjusted to your own needs and prefernces, making
+              By creating a meditation that is adjusted to your own needs and preferences, making
               this a habit becomes easier. It’s easier to do things that fit your needs.
             </h3>
             <div class="reviews-list">
