change iphone + translate polish reviews

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
           </div>
           <div class="phone-wrapper">
-            <img src="./assets/iphone 1.svg" />
+            <img src="./assets/iphone-animation.webp" />
           </div>
         </div>
       </header>
