--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <a href="#">Spotify</a>
               </li>
               <li>
-                <a href="#">Privacy policy</a>
+                <a href="https://www.privacypolicies.com/live/d0fa071b-c41e-4985-a73c-2401ce6a95f4">Privacy policy</a>
               </li>
             </ul>
           </nav>
